package com.holler.app.utils;

public interface Finishable {
    void finish();
}
