package com.holler.app.utils;

public interface KeyboardObserver{
    void onKeyboardShown();
    void onKeyboardHidden();
}