package com.holler.app.utils;

public interface SpinnerShower{
    void showSpinner();
    void hideSpinner();
}
